Change SubjectOutput's students field to list of SimpleStudents instead of SimpleData